# kairos-ai

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.mlo/: anti-slop-review.md  diff-audit.md  final-verdict.md  gate-results.md  security-edgecase-review.md
config/: context.lead-pipeline.yaml.disabled  context.yaml  paperclip_agents_context.yaml
deploy/: README.md  agent-telemetry.md  docker-compose.yml  otel-collector-config.yaml  paperclip-agent-otel.env.example
docs/: WORKING.md  case-study-1.md  config-guide.md  handoff-labeling-and-coordination-flag.md  honest-snapshot-1.md  honest-snapshot-2.md  honest-snapshot-3.md  insight-report-0.md  observed-tools-2026-06-12.md  p3-eval-layer-design.md  phase3-review.md  self-improvement-engineering-spec.md  self-improvement-plan.md  spotcheck-day4-rerun.md  spotcheck-day4.md  sprint-14day.md  sprint-exec-1-truth.md  sprint-exec-2-trust.md  sprint-exec-3-loop.md  sprint-progress.md  system-audit-and-self-improvement-roadmap.md  telemetry-span-audit-xer106.md
eval/: run_agreement.py  taubench_corpus.py
eval/corpus/: golden_trajectories.json  live_trace_ids.txt
eval/dashboard/: app.py
eval/reports/: eval-3d6a702..9975ecf.md  eval-8943dcc..2cfdbb3.md  (+5 more)
hooks/: kairos_hook.py
migrations/: 0001_schema_migrations.sql  0002_findings.sql  0003_nightly_rollup.sql  0004_labels.sql  0005_expectations.sql  0006_discovery_queue.sql  0007_nightly_rollup_baseline_break.sql  0008_honesty_fixes.sql  0009_eval_runs.sql  0010_spans.sql  0011_hook_events.sql  0012_discovery_queue_cluster_key.sql  0013_session_id.sql  0014_labels_nullable.sql  0015_eval_sets.sql  0016_cluster_status.sql  0017_eval_sets_mcc.sql  0018_cluster_insights.sql
scripts/: README.md  backfill.py  check_token_instrumentation.py  eval_run.py  export_spotcheck.py  honest_snapshot.py  install.sh  nightly_loop.py  observed_tools.py  package-lock.json  package.json  paperclip-otel-preload.mjs  rerun_spotcheck.py  uninstall.sh  validate_coordination_detector.py
tests/: test_cli.py  test_config.py  test_install_sh.py  test_kairos_hook.py  test_no_dropped_modules.py  test_package.py  test_redaction_pattern_sync.py
ui/: README.md  package-lock.json  package.json
ui/lib/: api.ts  (+1 more)
(+211 files in other folders)
