[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kairos-ai"
version = "0.1.0"
description = "Kairos AI — agent tracing SDK + on-demand failure-clustering engine. One IR, one path, no fallbacks."
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Akarsh Gajbhiye" },
]
readme = "README.md"

dependencies = [
    # Data modeling & config
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    # Structured logging
    "structlog>=25.1",
    # Tracing half (OpenTelemetry / OpenLLMetry spans -> IR)
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    # Engine half: reference-cohort distances
    "numpy>=2.1",
    # LLM semantic-decision client (OpenRouter via the OpenAI SDK)
    "openai>=1.0",
    # Business-context taxonomy (YAML)
    "pyyaml>=6.0",
    # CLI
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
phoenix = [
    # Phoenix HTTP client for PhoenixReader (queries spans by trace_id).
    "arize-phoenix-client>=2.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[project.scripts]
kairos = "kairos.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kairos = ["prompts/*.txt"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "A",   # builtins shadowing
    "SIM", # simplify
    "TCH", # type-checking imports
    "S",   # bandit (security)
    "T20", # no print
]
ignore = [
    "S101",  # assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["kairos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that hit real external services",
    "real_llm: marks tests that hit a real LLM provider (requires OPENROUTER_API_KEY)",
]
